--- a/less/navbar.less
+++ b/less/navbar.less
@@ -1,17 +1,18 @@
 @import '/globals.less';
 
 .navbar {
-    font-size       : @big-font-size;
-    background-color: @pink;
-    height          : 75px;
-    line-height     : 75px;
+    font-size  : @big-font-size;
+    background : @nav-bar-color;
+    height     : 60px;
+    line-height: 60px;
 
     .logo {
         vertical-align: middle;
+        height        : 30px;
     }
 
     .right-section {
         float: right;
-        
+
     }
 }
