--- a/less/styles.less
+++ b/less/styles.less
@@ -8,7 +8,7 @@ body {
 }
 
 body {
-    background-color: @light-orange;
+    background-color: @font-color;
 }
 
 .container {
@@ -18,13 +18,14 @@ body {
 .btn {
     user-select     : none;
     display         : inline-block;
-    background-color: @green;
+    background-color: @light-blue;
     color           : white;
     cursor          : pointer;
     line-height     : @font-size;
-    padding         : 10px 20px;
+    font-size       : 17px;
+    padding         : 5px 15px;
     margin-left     : 10px;
-    border-radius   : 15px;
+    border-radius   : 10px;
 }
 
 .btn:active {
