--- a/less/styles.less
+++ b/less/styles.less
@@ -13,6 +13,12 @@ body {
 
 .container {
     padding: 0 24px;
+    .title{
+        font-family: "Times New Roman", Times, sans-serif;
+        font-size: 40px;
+        text-align: center;
+        padding: 50px ;
+    }
 }
 
 .btn {
@@ -31,3 +37,4 @@ body {
 .btn:active {
     transform: scale(0.975);
 }
+
