--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,12 @@ body {
 .container {
   padding: 0 24px;
 }
+.container .title {
+  font-family: "Times New Roman", Times, sans-serif;
+  font-size: 40px;
+  text-align: center;
+  padding: 50px ;
+}
 .btn {
   user-select: none;
   display: inline-block;
