--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,7 @@
 .navbar {
+  position: sticky;
+  top: 0;
+  display: block;
   font-size: 21px;
   background: #36ABCB;
   height: 60px;
@@ -11,25 +14,148 @@
 .navbar .right-section {
   float: right;
 }
+.navbar + div {
+  height: calc(100% - 60px);
+}
+input[type=text],
+input[type=password] {
+  width: 100%;
+  /* padding: 12px 20px;
+    margin    : 8px 0; */
+  padding: 1rem 1.5rem;
+  margin: 0.8rem 0;
+  display: inline-block;
+  border: 0.2em solid black;
+  box-sizing: border-box;
+  text-align: center;
+}
+button {
+  background-color: #64DD17;
+  color: black;
+  /* padding      : 14px 20px;
+    margin          : 8px 0;
+    border          : none;
+    cursor          : pointer;
+    width           : 100%;
+    position        : center; */
+  padding: 1rem 1.5rem;
+  margin: 0.8rem 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+}
+button:hover {
+  opacity: 0.8;
+}
+/* Extra styles for the cancel button */
+.cancelbtn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #64DD17;
+}
+.container-popUp {
+  padding: 16px;
+  border: 5%;
+  padding: 5%;
+  margin: auto;
+  width: 100%;
+  background-color: #2297B7;
+}
+span.psw {
+  float: right;
+  padding-top: 16px;
+}
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: #000000;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */
+  padding-top: 60px;
+}
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 5% auto 15% auto;
+  /*5% from the top, 15% from the bottom and centered*/
+  border: 1px solid #888;
+  width: 35%;
+  /*Could be more or less, depending on screen size */
+}
+/* The Close Button (x) */
+.close {
+  position: absolute;
+  right: 25px;
+  top: 0;
+  color: #000;
+  font-size: 35px;
+  font-weight: bold;
+}
+label {
+  text-align: center;
+}
+.close:hover,
+.close:focus {
+  color: red;
+  cursor: pointer;
+}
+/* Add Zoom Animation */
+.animate {
+  -webkit-animation: animatezoom 0.6s;
+  animation: animatezoom 0.6s;
+}
+@-webkit-keyframes animatezoom {
+  from {
+    -webkit-transform: scale(0);
+  }
+  to {
+    -webkit-transform: scale(1);
+  }
+}
+@keyframes animatezoom {
+  from {
+    transform: scale(0);
+  }
+  to {
+    transform: scale(1);
+  }
+}
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+  span.psw {
+    display: block;
+    float: none;
+  }
+  .cancelbtn {
+    width: 100%;
+  }
+}
 html,
 body {
   margin: 0;
   padding: 0;
+  height: 100vh;
   font-size: 18px;
-}
-body {
-  background-color: #e9e9e9;
+  background-color: #3b3b3b;
 }
 .container {
-  padding: 0 24px;
-}
-.container .title {
-  font-family: "Times New Roman", Times, sans-serif;
-  font-size: 40px;
-  text-align: center;
-  padding: 50px ;
+  padding: 0 35px;
 }
 .btn {
+  font-family: Cambria;
   user-select: none;
   display: inline-block;
   background-color: rgba(255, 255, 255, 0.3);
@@ -44,120 +170,66 @@ body {
 .btn:active {
   transform: scale(0.975);
 }
-input[type=text], input[type=password] {
-  width: 100%;
-  /* padding: 12px 20px;
-  margin: 8px 0; */
-  padding: 1rem 1.5rem;
-  margin: 0.8rem 0;
-  display: inline-block;
-  border: 0.2em solid black;
-  box-sizing: border-box;
+.central-container {
+  min-width: 50%;
+  max-width: 60%;
+  margin: auto;
+  background-color: #e9e9e9;
+  padding: 0 20px;
+}
+.central-container .title {
+  color: #444444;
+  font-family: Cambria;
+  font-size: 40px;
   text-align: center;
+  padding: 50px;
 }
-
-button {
-  background-color: #64DD17;
-  color: black;
-  /* padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  position: center; */
-  padding: 1rem 1.5rem;
-  margin: 0.8rem 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
+.central-container .quiz-question {
+  padding: 40px;
+  font-size: 20px;
+  color: #444444;
 }
-
-button:hover {
-  opacity: 0.8;
+.central-container .quiz-selector {
+  padding: 0 40px;
 }
-
-/* Extra styles for the cancel button */
-.cancelbtn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #64DD17;
-}
-.container-popUp {
-  padding: 16px;
-  border: 5% ;
-  padding: 5%;
-  margin:auto;
-  width :100%;
-  background-color:#2297B7
-}
-
-span.psw {
-  float: right;
-  padding-top: 16px;
-}
-.modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  padding-top: 60px;
-}
-
-/* Modal Content/Box */
-.modal-content {
-  background-color: #fefefe;
-  margin: 5% auto 15% auto; /*5% from the top, 15% from the bottom and centered*/
-  border: 1px solid #888;
-  width: 35%; /*Could be more or less, depending on screen size */
-}
-
-/* The Close Button (x) */
-.close {
-  position: absolute;
-  right: 25px;
-  top: 0;
-  color: #000;
-  font-size: 35px;
-  font-weight: bold;
-}
-label{
-  text-align:center;
-}
-.close:hover,
-.close:focus {
-  color: red;
+.central-container .quiz-selector .answer {
+  border-top: solid 1px #eee;
+  border-radius: 3px;
+  background: #ffffff;
+  padding: 20px;
+  transition: box-shadow ease-in 100ms;
   cursor: pointer;
 }
-
-/* Add Zoom Animation */
-.animate {
-  -webkit-animation: animatezoom 0.6s;
-  animation: animatezoom 0.6s
+.central-container .quiz-selector .answer .icon {
+  display: inline-block;
+  width: 15px;
+  background-color: white;
+  height: 15px;
+  border: 2px solid black;
+  border-radius: 100%;
 }
-
-@-webkit-keyframes animatezoom {
-  from {-webkit-transform: scale(0)} 
-  to {-webkit-transform: scale(1)}
+.central-container .quiz-selector .answer > * {
+  display: inline-block;
+  vertical-align: middle;
+  white-space: normal;
 }
-  
-@keyframes animatezoom {
-  from {transform: scale(0)} 
-  to {transform: scale(1)}
+.central-container .quiz-selector .answer:after {
+  content: '';
+  display: inline-block;
+  height: 100%;
+  vertical-align: middle;
+  width: 0;
 }
-
-/* Change styles for span and cancel button on extra small screens */
-@media screen and (max-width: 300px) {
-  span.psw {
-     display: block;
-     float: none;
-  }
-  .cancelbtn {
-     width: 100%;
-  }
+.central-container p {
+  color: #444444;
+  font-family: Cambria;
+}
+.scrollable {
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.scrollable::-webkit-scrollbar {
+  width: 0;
+  height: 0;
 }
