--- a/less/globals.less
+++ b/less/globals.less
@@ -2,13 +2,11 @@
 @font-size      : 18px;
 @small-font-size: 15px;
 
-@light-blue: rgba(255, 255, 255, 0.3);
-@button-color:#8BC34A;
-@nav-bar-color:#36ABCB;
-@font-color  : #e9e9e9;
-@padding-color:#3b3b3b;
-@light-green : #85DCBB;
-@green       : #41B3A3;
-@orange      : #E27D60;
-@light-orange: #E8A87C;
-@pink        : #C38D9E;
+@mobile-size: ~"(max-width: 639px)";
+@tablet-size: ~"(min-width: 640px) and (max-width: 1024px)";
+
+@light-blue   : rgba(255, 255, 255, 0.3);
+@button-color : #8BC34A;
+@nav-bar-color: #36ABCB;
+@font-color   : #e9e9e9;
+@padding-color: #3b3b3b;
