--- a/less/navbar.less
+++ b/less/navbar.less
@@ -1,18 +1,26 @@
 @import '/globals.less';
 
+@nav-height: 60px;
+
 .navbar {
+    position   : sticky;
+    top        : 0;
+    display    : block;
     font-size  : @big-font-size;
     background : @nav-bar-color;
-    height     : 60px;
-    line-height: 60px;
+    height     : @nav-height;
+    line-height: @nav-height;
 
     .logo {
         vertical-align: middle;
-        height        : 30px;
+        height        : @nav-height / 2;
     }
 
     .right-section {
         float: right;
+    }
 
+    +div {
+        height: calc(100% - @nav-height);
     }
 }
