--- a/less/styles.less
+++ b/less/styles.less
@@ -40,6 +40,19 @@ body {
     background-color: @font-color;
     padding         : 0 20px;
 
+    .ilinca {
+        background-color: @nav-bar-color;
+        color           : white;
+        font-family     : Cambria;
+        display         : inline-block;
+        cursor          : pointer;
+        left            : 80px;
+        top             : 20px;
+        font-size       : 17px;
+        border-radius   : 10px;
+
+    }
+
     .title {
         color      : #444444;
         font-family: Cambria;
@@ -60,7 +73,7 @@ body {
         .answer {
             border-top   : solid 1px #eee;
             border-radius: 3px;
-            background   : #ffffff;
+            background   : white;
             padding      : 20px;
             transition   : box-shadow ease-in 100ms;
             cursor       : pointer;
@@ -74,7 +87,6 @@ body {
                 border-radius   : 100%;
             }
 
-            .sentence {}
 
             >* {
                 display       : inline-block;
@@ -92,12 +104,28 @@ body {
         }
     }
 
-
     p {
         color      : #444444;
         font-family: Cambria;
     }
+
+    .answer-btn {
+
+        background-color: @nav-bar-color;
+        color           : white;
+        font-family     : Cambria;
+        display         : inline-block;
+        cursor          : pointer;
+        position        : relative;
+        float           : right;
+        padding         : 14px 40px;
+        margin-right    : 80px;
+        margin-top      : 20px;
+        font-size       : 17px;
+        border-radius   : 10px;
+    }
 }
+
 
 .scrollable {
     overflow-y        : scroll;
