--- a/css/styles.css
+++ b/css/styles.css
@@ -177,12 +177,31 @@ body {
   background-color: #e9e9e9;
   padding: 0 20px;
 }
+.central-container .image {
+  display: block;
+  margin-top: 30px;
+  margin-bottom: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 500px;
+  height: 300px;
+}
+.central-container ul {
+  list-style-type: none;
+}
 .central-container .title {
   color: #444444;
   font-family: Cambria;
   font-size: 40px;
   text-align: center;
   padding: 50px;
+}
+.central-container .title-of-article {
+  color: #444444;
+  font-family: Cambria;
+  font-size: 25px;
+  text-align: center;
+  padding: 10px;
 }
 .central-container .quiz-question {
   padding: 40px;
@@ -224,6 +243,11 @@ body {
   color: #444444;
   font-family: Cambria;
 }
+.central-container .links {
+  color: #444444;
+  font-family: Cambria;
+  font-size: 15px;
+}
 .central-container .answer-btn {
   background-color: #36ABCB;
   color: white;
@@ -242,8 +266,4 @@ body {
   overflow-y: scroll;
   scrollbar-width: none;
   -ms-overflow-style: none;
-}
-.scrollable::-webkit-scrollbar {
-  width: 0;
-  height: 0;
 }
