--- a/less/styles.less
+++ b/less/styles.less
@@ -40,12 +40,34 @@ body {
     background-color: @font-color;
     padding         : 0 20px;
 
+    .image {
+        display      : block;
+        margin-top   : 30px;
+        margin-bottom: 15px;
+        margin-left  : auto;
+        margin-right : auto;
+        width        : 500px;
+        height       : 300px;
+    }
+
+    ul {
+        list-style-type: none;
+    }
+
     .title {
         color      : #444444;
         font-family: Cambria;
         font-size  : 40px;
         text-align : center;
         padding    : 50px;
+    }
+
+    .title-of-article {
+        color      : #444444;
+        font-family: Cambria;
+        font-size  : 25px;
+        text-align : center;
+        padding    : 10px;
     }
 
     .quiz-question {
@@ -96,6 +118,12 @@ body {
         font-family: Cambria;
     }
 
+    .links {
+        color      : #444444;
+        font-family: Cambria;
+        font-size  : 15px;
+    }
+
     .answer-btn {
 
         background-color: @nav-bar-color;
@@ -120,6 +148,7 @@ body {
     -ms-overflow-style: none;
 }
 
+/*Face sa dispara bara de scroll*/
 .scrollable::-webkit-scrollbar {
     width : 0;
     height: 0;
