--- a/less/styles.less
+++ b/less/styles.less
@@ -119,6 +119,7 @@ body {
     }
 
     .links {
+        text-align: center;
         color      : #444444;
         font-family: Cambria;
         font-size  : 15px;
