--- a/css/login.css
+++ b/css/login.css
@@ -7,57 +7,57 @@
     height: 60px;
     line-height: 60px;
   }
-  .navbar .logo {
+.navbar .logo {
     vertical-align: middle;
     height: 30px;
-  }
-  .navbar .right-section {
+}
+.navbar .right-section {
     float: right;
-  }
-  .navbar + div {
+}
+.navbar + div {
     height: calc(100% - 60px);
-  }
-  
-  
-  html, body {
-    margin: 0;
-    padding: 0;
-    height: 100vh;
-    font-size: 18px;
-    background-color: #3b3b3b;
-  }
-  
-  .container {
-    padding: 0 35px;
-  }
-  
-  .btn {
-    font-family: Cambria;
-    user-select: none;
-    display: inline-block;
-    background-color: rgba(255, 255, 255, 0.3);
-    color: white;
-    cursor: pointer;
-    line-height: 18px;
-    font-size: 17px;
-    padding: 5px 15px;
-    margin-left: 10px;
-    border-radius: 10px;
-  }
-  
-  .btn:active {
-    transform: scale(0.975);
-  }
-  
-  .central-container {
+}
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  font-size: 18px;
+  background-color: #3b3b3b;
+}
+
+.container {
+  padding: 0 35px;
+}
+
+.btn {
+  font-family: Cambria;
+  user-select: none;
+  display: inline-block;
+  background-color: rgba(255, 255, 255, 0.3);
+  color: white;
+  cursor: pointer;
+  line-height: 18px;
+  font-size: 17px;
+  padding: 5px 15px;
+  margin-left: 10px;
+  border-radius: 10px;
+}
+
+.btn:active {
+  transform: scale(0.975);
+}
+
+.central-container {
     min-width: 50%;
     max-width: 60%;
+    min-height: 100%;
     margin: auto;
     background-color: #e9e9e9;
     padding: 0 20px;
-  }
-  
-  .button {
+}
+
+.button {
     background-color: #8BC34A;
     color: white;
     padding: 1rem 1.5rem;
@@ -67,45 +67,46 @@
     width: 100%;
   }
   
-  .button:hover {
-    opacity: 0.5;
-  }
-  
-  input {
-    width: 100%;
-    padding: 1rem 1.5rem;
-    margin: 0.8rem 0;
-    display: inline-block;
-    border: 0.1rem solid;
-    box-sizing: border-box;
-  }
-  
-  span p input {
-    width: 27%;
-    margin-right: 1em;
-  }
-  
-  .center {
+.button:hover {
+  opacity: 0.5;
+}
+
+input {
+  width: 100%;
+  padding: 1rem 1.5rem;
+  margin: 0.8rem 0;
+  display: inline-block;
+  border: 0.1rem solid;
+  box-sizing: border-box;
+}
+
+span p input {
+  width: 27%;
+  margin-right: 1em;
+}
+
+/* .center {
     background-color: #e9e9e9;
-    border: 5%;
+    border: 5% ;
     padding: 5%;
-    margin: auto;
-    width: 35%;
-  }
-  
-  .boxcontent {
-    border: 10%;
-    padding: 10%;
-    margin: auto;
-    width: 75%;
-  }
-  
-  input {
+    margin:auto;
+    width :35%;
+} */
+.boxcontent {
+    border: 5% ;
+    padding: 5%;
+    margin:auto;
+    width :40%;
+}
+input{
     text-align: center;
-  }
-  
-  div {
-    display: block;
-  }
-  
-  
+}
+
+input {
+  text-align: center;
+}
+
+div {
+  display: block;
+}
+
