--- a/css/login.css
+++ b/css/login.css
@@ -30,24 +30,6 @@ body {
   padding: 0 35px;
 }
 
-.btn {
-  font-family: Cambria;
-  user-select: none;
-  display: inline-block;
-  background-color: rgba(255, 255, 255, 0.3);
-  color: white;
-  cursor: pointer;
-  line-height: 18px;
-  font-size: 17px;
-  padding: 5px 15px;
-  margin-left: 10px;
-  border-radius: 10px;
-}
-
-.btn:active {
-  transform: scale(0.975);
-}
-
 .central-container {
     min-width: 50%;
     max-width: 60%;
@@ -78,12 +60,13 @@ input {
   display: inline-block;
   border: 0.1rem solid;
   box-sizing: border-box;
+  text-align: center;
 }
-
+/* 
 span p input {
   width: 27%;
   margin-right: 1em;
-}
+} */
 
 /* .center {
     background-color: #e9e9e9;
@@ -97,13 +80,6 @@ span p input {
     padding: 5%;
     margin:auto;
     width :40%;
-}
-input{
-    text-align: center;
-}
-
-input {
-  text-align: center;
 }
 
 div {
