--- a/less/navbar.less
+++ b/less/navbar.less
@@ -16,6 +16,16 @@
         height        : @nav-height / 2;
     }
 
+    .icon {
+        vertical-align: middle;
+        height        : @nav-height / 3;
+        filter        : invert(100%) sepia(2%) saturate(845%) hue-rotate(351deg) brightness(117%) contrast(100%);
+    }
+
+    .btn-section{
+        display: inline-block;
+    }
+
     .right-section {
         float: right;
     }
