--- a/less/styles.less
+++ b/less/styles.less
@@ -119,7 +119,7 @@ body {
     }
 
     .links {
-        text-align: center;
+        text-align : center;
         color      : #444444;
         font-family: Cambria;
         font-size  : 15px;
@@ -140,6 +140,12 @@ body {
         font-size       : 17px;
         border-radius   : 10px;
     }
+
+    .publicity {
+        color      : #444444;
+        font-family: Cambria;
+        font-size  : 10px;
+    }
 }
 
 
@@ -155,6 +161,12 @@ body {
     height: 0;
 }
 
-@media @mobile-size {}
+@media @mobile-size {
+    .navbar {
+        .btn-section {
+            display         : none;
+        }
+    }
+}
 
 @media @tablet-size {}
