--- a/less/styles.less
+++ b/less/styles.less
@@ -34,6 +34,7 @@ body {
     transform: scale(0.975);
 }
 
+
 .central-container {
     height          : 100%;
     min-width       : 50%;
@@ -142,6 +143,23 @@ body {
         margin-top      : 20px;
         font-size       : 17px;
         border-radius   : 10px;
+    }
+
+    .admin-button {
+        background-color: @nav-bar-color;
+        text-align      : center;
+        color           : white;
+        font-family     : Cambria;
+        display         : block;
+        cursor          : pointer;
+        position        : relative;
+        padding         : 14px 40px;
+        margin-right    : 80px;
+        margin-top      : 20px;
+        font-size       : 17px;
+        border-radius   : 10px;
+        max-width       : 170px; // trebuie sa setez max-width in functie de dimensiunea textului;
+        overflow        : hidden;
     }
 
 
