--- a/css/styles.css
+++ b/css/styles.css
@@ -296,6 +296,22 @@ body {
   font-size: 17px;
   border-radius: 10px;
 }
+.central-container .admin-button {
+  background-color: #36ABCB;
+  text-align: center;
+  color: white;
+  font-family: Cambria;
+  display: block;
+  cursor: pointer;
+  position: relative;
+  padding: 14px 40px;
+  margin-right: 80px;
+  margin-top: 20px;
+  font-size: 17px;
+  border-radius: 10px;
+  max-width: 170px;
+  overflow: hidden;
+}
 .scrollable {
   overflow-y: scroll;
   scrollbar-width: none;
