Add a statistics page and change the navbar from category page

--- a/less/styles.less
+++ b/less/styles.less
@@ -162,6 +162,22 @@ body {
         overflow        : hidden;
     }
 
+    .b {
+        background-color: @nav-bar-color;
+        text-align      : center;
+        color           : white;
+        font-family     : Cambria;
+        display         : inline-block;
+        cursor          : pointer;
+        position        : relative;
+        padding         : 10px 101px;
+        margin-top      : 20px;
+        font-size       : 17px;
+        border-radius   : 10px;
+        max-width       : 170px; 
+        overflow        : hidden;
+    }
+
 
 }
 
