--- a/css/styles.css
+++ b/css/styles.css
@@ -312,6 +312,21 @@ body {
   max-width: 170px;
   overflow: hidden;
 }
+.central-container .b {
+  background-color: #36ABCB;
+  text-align: center;
+  color: white;
+  font-family: Cambria;
+  display: inline-block;
+  cursor: pointer;
+  position: relative;
+  padding: 10px 101px;
+  margin-top: 20px;
+  font-size: 17px;
+  border-radius: 10px;
+  max-width: 170px;
+  overflow: hidden;
+}
 .scrollable {
   overflow-y: scroll;
   scrollbar-width: none;
