--- a/css/category.css
+++ b/css/category.css
@@ -153,20 +153,19 @@
 
 
   .slider {
-    /* width: 300px; */
+    width: 700px;
     text-align: center;
     overflow: hidden;
     border: 5%;
-    padding: 5%;
+    padding: 10%;
     margin: auto;
-    width: 75%;
   }
   
   .slides {
     display: flex;
-    
+
     overflow-x: auto;
-    /* scroll-snap-type: x mandatory; */
+    scroll-snap-type: x mandatory;
     
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
@@ -190,8 +189,8 @@
   .slides > div {
     scroll-snap-align: start;
     flex-shrink: 0;
-    width: 300px;
-    height: 300px;
+    width: 700px;
+    height: 400px;
     margin-right: 50px;
     border-radius: 10px;
     background: #eee;
@@ -206,9 +205,6 @@
     font-size: 100px;
   }
 
-
-
-  
   .slider > a {
     display: inline-flex;
     width: 1.5rem;
@@ -225,12 +221,26 @@
     top: 1px;
   }
   .slider > a:focus {
-    background: #000;
+    background: #8BC34A;
   }
-  
-  /* Don't need button navigation */
-  @supports (scroll-snap-type) {
-    .slider > a {
-      display: none;
-    }
+  .central-container .image {
+    display: block;
+    margin-top: 30px;
+    margin-bottom: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 500px;
+    height: 300px;
   }
+
+ .category-title{
+  color: white;
+  font-family: Cambria;
+  font-size: 25px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+ } 
+
