Improve information pages

--- a/less/styles.less
+++ b/less/styles.less
@@ -174,8 +174,45 @@ body {
         margin-top      : 20px;
         font-size       : 17px;
         border-radius   : 10px;
-        max-width       : 170px; 
+        max-width       : 170px;
         overflow        : hidden;
+    }
+
+    .btn-home {
+        background-color: @nav-bar-color;
+        text-align      : center;
+        color           : white;
+        font-family     : Cambria;
+        display         : block;
+        cursor          : pointer;
+        position        : relative;
+        padding         : 10px 40px;
+        margin-top      : 20px;
+        font-size       : 17px;
+        border-radius   : 10px;
+        max-width       : 170px;
+        overflow        : hidden;
+    }
+
+    .btnn {
+        background-color: @nav-bar-color;
+        text-align      : center;
+        color           : white;
+        font-family     : Cambria;
+        display         : block;
+        cursor          : pointer;
+        position        : relative;
+        padding         : 10px 40px;
+        margin-top      : 20px;
+        margin-bottom   : 14px;
+        font-size       : 17px;
+        border-radius   : 10px;
+        max-width       : 170px;
+        overflow        : hidden;
+    }
+
+    .test-div{
+        margin-left: 20px;
     }
 
 
@@ -203,8 +240,8 @@ body {
         max-width: 90%;
 
         .image {
-            width : 300px;
-            height: 150px;
+            width : 220px;
+            height: 110px;
         }
     }
 }
