--- a/css/styles.css
+++ b/css/styles.css
@@ -50,8 +50,6 @@
 input[type=text],
 input[type=password] {
   width: 100%;
-  /* padding: 12px 20px;
-    margin    : 8px 0; */
   padding: 1rem 1.5rem;
   margin: 0.8rem 0;
   display: inline-block;
@@ -62,12 +60,6 @@ input[type=password] {
 button {
   background-color: #64DD17;
   color: black;
-  /* padding      : 14px 20px;
-    margin          : 8px 0;
-    border          : none;
-    cursor          : pointer;
-    width           : 100%;
-    position        : center; */
   padding: 1rem 1.5rem;
   margin: 0.8rem 0;
   border: none;
@@ -327,6 +319,40 @@ body {
   max-width: 170px;
   overflow: hidden;
 }
+.central-container .btn-home {
+  background-color: #36ABCB;
+  text-align: center;
+  color: white;
+  font-family: Cambria;
+  display: block;
+  cursor: pointer;
+  position: relative;
+  padding: 10px 40px;
+  margin-top: 20px;
+  font-size: 17px;
+  border-radius: 10px;
+  max-width: 170px;
+  overflow: hidden;
+}
+.central-container .btnn {
+  background-color: #36ABCB;
+  text-align: center;
+  color: white;
+  font-family: Cambria;
+  display: block;
+  cursor: pointer;
+  position: relative;
+  padding: 10px 40px;
+  margin-top: 20px;
+  margin-bottom: 14px;
+  font-size: 17px;
+  border-radius: 10px;
+  max-width: 170px;
+  overflow: hidden;
+}
+.central-container .test-div {
+  margin-left: 20px;
+}
 .scrollable {
   overflow-y: scroll;
   scrollbar-width: none;
@@ -345,8 +371,8 @@ body {
     max-width: 90%;
   }
   .central-container .image {
-    width: 300px;
-    height: 150px;
+    width: 220px;
+    height: 110px;
   }
 }
 @media (min-width: 640px) and (max-width: 1024px) {
