--- a/css/styles.css
+++ b/css/styles.css
@@ -285,6 +285,7 @@ body {
   padding: 14px 40px;
   margin-right: 80px;
   margin-top: 20px;
+  margin-bottom: 20px;
   font-size: 17px;
   border-radius: 10px;
 }
