--- a/less/styles.less
+++ b/less/styles.less
@@ -141,6 +141,7 @@ body {
         padding         : 14px 40px;
         margin-right    : 80px;
         margin-top      : 20px;
+        margin-bottom   : 20px;
         font-size       : 17px;
         border-radius   : 10px;
     }
@@ -211,7 +212,7 @@ body {
         overflow        : hidden;
     }
 
-    .test-div{
+    .test-div {
         margin-left: 20px;
     }
 
