--- a/css/login.css
+++ b/css/login.css
@@ -83,6 +83,16 @@ input {
   text-align: center;
 }
 
+select {
+  width: 100%;
+  padding: 1rem 1.5rem;
+  margin: 0.8rem 0;
+  display: inline-block;
+  border: 0.1rem solid;
+  box-sizing: border-box;
+  text-align: center;
+}
+
 .boxcontent {
   border: 5%;
   padding: 5%;
