--- a/css/styles.css
+++ b/css/styles.css
@@ -350,9 +350,13 @@ body {
   border-radius: 10px;
   max-width: 170px;
   overflow: hidden;
+  left: 30%;
 }
 .central-container .test-div {
   margin-left: 20px;
+  font-family: Cambria;
+  text-align: center;
+  padding: 10px;
 }
 .scrollable {
   overflow-y: scroll;
