--- a/less/styles.less
+++ b/less/styles.less
@@ -137,9 +137,9 @@ body {
         display         : inline-block;
         cursor          : pointer;
         position        : relative;
-        float           : right;
         padding         : 14px 40px;
         margin-right    : 80px;
+        margin-left     : 40px;
         margin-top      : 20px;
         margin-bottom   : 20px;
         font-size       : 17px;
