--- a/less/styles.less
+++ b/less/styles.less
@@ -216,6 +216,30 @@ body {
         margin-left: 20px;
     }
 
+    .i {
+        width     : 100%;
+        padding   : 1rem 1.5rem;
+        margin    : 0.8rem 0;
+        display   : inline-block;
+        border    : 0.1rem solid;
+        box-sizing: border-box;
+        text-align: center;
+    }
+
+    table {
+        width: 100%;
+        border-collapse: collapse;
+        border: 1px solid black;
+    }
+    td{
+        border: 1px solid black;
+    }
+
+    th {
+        border: 1px solid black;
+        height: 50px;
+        text-align: left;
+    }
 
 }
 
