--- a/css/styles.css
+++ b/css/styles.css
@@ -213,6 +213,11 @@ body {
   text-align: center;
   padding: 50px;
 }
+.central-container .title p {
+  text-align: center;
+  font-size: 20px;
+  margin: 4rem 0;
+}
 .central-container .title-of-article {
   color: #444444;
   font-family: Cambria;
@@ -299,19 +304,25 @@ body {
   overflow: hidden;
 }
 .central-container .b {
-  background-color: #36ABCB;
   text-align: center;
-  color: white;
-  font-family: Cambria;
-  display: inline-block;
-  cursor: pointer;
-  position: relative;
-  padding: 10px 101px;
-  margin-top: 20px;
-  font-size: 17px;
-  border-radius: 10px;
-  max-width: 170px;
-  overflow: hidden;
+    /* color: white; */
+    font-family: Cambria;
+    display: inline-block;
+    /* cursor: pointer; */
+    position: relative;
+    /* padding: 10px 101px; */
+    margin-top: 20px;
+    font-size: 17px;
+    border-radius: 10px;
+    max-width: 170px;
+    overflow: hidden;
+    background-color: #36ABCB;
+    color: white;
+    padding: 1rem 1.5rem;
+    margin: 0.2rem 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
 }
 .central-container .btn-home {
   background-color: #36ABCB;
