--- a/css/styles.css
+++ b/css/styles.css
@@ -354,6 +354,10 @@ body {
   border-radius: 10px;
   max-width: 170px;
   overflow: hidden;
+  margin-left: 30%;
+}
+.test-div p {
+  margin-left: 10%;
 }
 .central-container .test-div {
   margin-left: 20px;
