--- a/css/styles.css
+++ b/css/styles.css
@@ -75,7 +75,14 @@ button:hover {
   padding: 10px 18px;
   background-color: #64DD17;
 }
-
+.container-popUp {
+  padding: 16px;
+  border: 5%;
+  padding: 5%;
+  margin: auto;
+  width: 100%;
+  background-color: #2297B7;
+}
 span.psw {
   float: right;
   padding-top: 16px;
@@ -322,6 +329,7 @@ body {
   cursor: pointer;
   position: relative;
   padding: 10px 40px;
+  margin-bottom: 20px;
   margin-top: 20px;
   font-size: 17px;
   border-radius: 10px;
