--- a/less/styles.less
+++ b/less/styles.less
@@ -188,6 +188,7 @@ body {
         cursor          : pointer;
         position        : relative;
         padding         : 10px 40px;
+        margin-bottom   : 20px;
         margin-top      : 20px;
         font-size       : 17px;
         border-radius   : 10px;
@@ -227,17 +228,18 @@ body {
     }
 
     table {
-        width: 100%;
+        width          : 100%;
         border-collapse: collapse;
-        border: 1px solid black;
+        border         : 1px solid black;
     }
-    td{
+
+    td {
         border: 1px solid black;
     }
 
     th {
-        border: 1px solid black;
-        height: 50px;
+        border    : 1px solid black;
+        height    : 50px;
         text-align: left;
     }
 
