--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,6 @@ input[type=password] {
   padding: 1rem 1.5rem;
   margin: 0.8rem 0;
   display: inline-block;
-  border: 0.2em solid black;
   box-sizing: border-box;
   text-align: center;
 }
@@ -378,6 +377,11 @@ body {
   border: 0.1rem solid;
   box-sizing: border-box;
   text-align: center;
+}
+.central-container .input-information{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
 }
 .central-container table {
   width: 100%;
